package com.appointment.domain;

/**
 * Represents system administrator.
 */
public class Administrator extends User {

    public Administrator(String username, String password) {
        super(username, password);
    }
}