package com.appointment.domain;

public class TimeSlots {

}
