package com.appointment.notification;

public interface NotificationService {

    void sendNotification(String to, String message);

}